@@ -11,4 +11,5 @@
 11. Added alt attributes to all the images
 12. Got rid of an extraneous </img> tag.
 13. Changes div.search-engine-optimization to div#search-engine-optimization to work with link
-14. Next Step: get rid of classes and adjust style.css accordingly?
+14. Got rid of .online-reputation-management & .social-media-marketing as there are id's that match those names; use # instead to style.
+15. Changed class selectors as above to id selectors
